fix mini-board vstext username overflow

--- a/ui/common/css/component/_vs.scss
+++ b/ui/common/css/component/_vs.scss
@@ -1,5 +1,5 @@
 .vstext {
-  @extend %flex-between, %nowrap-hidden, %box-neat;
+  @extend %flex-between-nowrap, %nowrap-hidden, %box-neat;
   background: $c-bg-box;
   padding: .3em .6em;
   &__center {
